@@ -1,29 +1,24 @@
 package br.com.wbaamaral.algafoodapi.api.controller;
 
 import java.util.List;
+import java.util.Map;
 
 import javax.validation.Valid;
 
-import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.converter.json.MappingJacksonValue;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
-
-import com.fasterxml.jackson.databind.ser.impl.SimpleBeanPropertyFilter;
-import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
-import com.google.common.collect.ImmutableMap;
 
 import br.com.wbaamaral.algafoodapi.api.assembler.PedidoInputDisassembler;
 import br.com.wbaamaral.algafoodapi.api.assembler.PedidoModelAssembler;
@@ -31,7 +26,6 @@ import br.com.wbaamaral.algafoodapi.api.assembler.PedidoModelAssemblerJsonFilter
 import br.com.wbaamaral.algafoodapi.api.assembler.PedidoResumoModelAssembler;
 import br.com.wbaamaral.algafoodapi.api.model.PedidoModel;
 import br.com.wbaamaral.algafoodapi.api.model.PedidoResumoModel;
-import br.com.wbaamaral.algafoodapi.api.model.PedidoResumoModelJsonFilter;
 import br.com.wbaamaral.algafoodapi.api.model.input.PedidoInput;
 import br.com.wbaamaral.algafoodapi.core.data.PageableTranslator;
 import br.com.wbaamaral.algafoodapi.domain.exception.EntidadeNaoEncontradaException;
@@ -47,89 +41,78 @@ import br.com.wbaamaral.algafoodapi.infrastructure.repository.spec.PedidoSpecs;
 @RequestMapping(value = "/pedidos")
 public class PedidoController {
 
-	@Autowired
-	private PedidoRepository pedidoRepository;
+   @Autowired
+   private PedidoRepository pedidoRepository;
+   
+   @Autowired
+   private EmissaoPedidoService emissaoPedido;
+   
+   @Autowired
+   private PedidoModelAssembler pedidoModelAssembler;
+   
+   @Autowired
+   private PedidoResumoModelAssembler pedidoResumoModelAssembler;
+   
+   @Autowired
+   private PedidoInputDisassembler pedidoInputDisassembler;
 
-	@Autowired
-	private EmissaoPedidoService emissaoPedido;
 
-	@Autowired
-	private PedidoModelAssembler pedidoModelAssembler;
+   @GetMapping(produces = MediaType.APPLICATION_JSON_VALUE)
+   public Page<PedidoResumoModel> pesquisar(PedidoFilter filtro, 
+         @PageableDefault(size = 10) Pageable pageable) {
+      pageable = traduzirPageable(pageable);
+      
+      Page<Pedido> pedidosPage = pedidoRepository.findAll(
+            PedidoSpecs.usandoFiltro(filtro), pageable);
+      
+      List<PedidoResumoModel> pedidosResumoModel = pedidoResumoModelAssembler
+            .toCollectionModel(pedidosPage.getContent());
+      
+      Page<PedidoResumoModel> pedidosResumoModelPage = new PageImpl<>(
+            pedidosResumoModel, pageable, pedidosPage.getTotalElements());
+      
+      return pedidosResumoModelPage;
+   }
 
-	@Autowired
-	private PedidoResumoModelAssembler pedidoResumoModelAssembler;
+   @PostMapping(produces = MediaType.APPLICATION_JSON_VALUE)
+   @ResponseStatus(HttpStatus.CREATED)
+   public PedidoModel adicionar(@Valid @RequestBody PedidoInput pedidoInput) {
+      try {
+         Pedido novoPedido = pedidoInputDisassembler.toDomainObject(pedidoInput);
 
-	@Autowired
-	private PedidoModelAssemblerJsonFilter pedidoResumoModelAssemblerJ;
+         // TODO pegar usuário autenticado
+         novoPedido.setCliente(new Usuario());
+         novoPedido.getCliente().setId(1L);
 
-	@Autowired
-	private PedidoInputDisassembler pedidoInputDisassembler;
+         novoPedido = emissaoPedido.emitir(novoPedido);
 
-	@GetMapping
-	public Page<PedidoResumoModel> pesquisar(PedidoFilter filtro, @PageableDefault(size = 10) Pageable pageable) {
-		pageable = traduzirPageable(pageable);
+         return pedidoModelAssembler.toModel(novoPedido);
+      } catch (EntidadeNaoEncontradaException e) {
+         throw new NegocioException(e.getMessage(), e);
+      }
+   }
 
-		Page<Pedido> pedidosPage = pedidoRepository.findAll(PedidoSpecs.usandoFiltro(filtro), pageable);
+   @GetMapping(value = "/{codigoPedido}", produces = MediaType.APPLICATION_JSON_VALUE)
+   public PedidoModel buscar(@PathVariable String codigoPedido) {
+      Pedido pedido = emissaoPedido.buscarOuFalhar(codigoPedido);
+      
+      return pedidoModelAssembler.toModel(pedido);
+   }
 
-		List<PedidoResumoModel> pedidosResumoModel = pedidoResumoModelAssembler
-				.toCollectionModel(pedidosPage.getContent());
 
-		Page<PedidoResumoModel> pedidosResumoModelPage = new PageImpl<>(pedidosResumoModel, pageable,
-				pedidosPage.getTotalElements());
-
-		return pedidosResumoModelPage;
-	}
-
-	@GetMapping("/aula-13-2")
-	public MappingJacksonValue listar(@RequestParam(required = false) String campos) {
-		List<Pedido> pedidos = pedidoRepository.findAll();
-		List<PedidoResumoModelJsonFilter> pedidosModel = pedidoResumoModelAssemblerJ.toCollectionModel(pedidos);
-
-		MappingJacksonValue pedidosWrapper = new MappingJacksonValue(pedidosModel);
-
-		SimpleFilterProvider filterProvider = new SimpleFilterProvider();
-		filterProvider.addFilter("pedidoFilter", SimpleBeanPropertyFilter.serializeAll());
-
-		if (StringUtils.isNotBlank(campos)) {
-			filterProvider.addFilter("pedidoFilter", SimpleBeanPropertyFilter.filterOutAllExcept(campos.split(",")));
-		}
-
-		pedidosWrapper.setFilters(filterProvider);
-
-		return pedidosWrapper;
-	}
-
-	@GetMapping("/{codigoPedido}")
-	public PedidoModel buscar(@PathVariable String codigoPedido) {
-
-		Pedido pedido = emissaoPedido.buscarOuFalhar(codigoPedido);
-
-		return pedidoModelAssembler.toModel(pedido);
-	}
-
-	@PostMapping
-	@ResponseStatus(HttpStatus.CREATED)
-	public PedidoModel adicionar(@Valid @RequestBody PedidoInput pedidoInput) {
-
-		try {
-			Pedido novoPedido = pedidoInputDisassembler.toDomainObject(pedidoInput);
-
-			// TODO pegar usuário autenticado
-			novoPedido.setCliente(new Usuario());
-			novoPedido.getCliente().setId(1L);
-
-			novoPedido = emissaoPedido.emitir(novoPedido);
-
-			return pedidoModelAssembler.toModel(novoPedido);
-		} catch (EntidadeNaoEncontradaException e) {
-			throw new NegocioException(e.getMessage(), e);
-		}
-	}
-
-	private Pageable traduzirPageable(Pageable apiPageable) {
-		var mapeamento = ImmutableMap.of("codigo", "codigo", "restaurante.nome", "restaurante.nome", "nomeCliente",
-				"cliente.nome", "valorTotal", "valorTotal");
-
-		return PageableTranslator.translate(apiPageable, mapeamento);
-	}
+   private Pageable traduzirPageable(Pageable apiPageable) {
+      var mapeamento = Map.of(
+            "codigo", "codigo",
+            "subtotal", "subtotal",
+            "taxaFrete", "taxaFrete",
+            "valorTotal", "valorTotal",
+            "dataCriacao", "dataCriacao",
+            "restaurante.nome", "restaurante.nome",
+            "restaurante.id", "restaurante.id",
+            "cliente.id", "cliente.id",
+            "cliente.nome", "cliente.nome"
+         );
+      
+      return PageableTranslator.translate(apiPageable, mapeamento);
+   }
 }
